--- a/HelloToast/app/src/main/res/layout/activity_main.xml
+++ b/HelloToast/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -23,12 +23,13 @@
         android:id="@+id/show_count"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/button_toast"
+        android:layout_alignParentStart="true"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="#FFFF00"
-        android:layout_weight="1"
         android:gravity="center_vertical"
         android:text="@string/count_initial_value"
         android:textAlignment="center"
@@ -46,6 +47,10 @@
         android:background="@color/colorPrimary"
         android:onClick="countUp"
         android:text="@string/button_label_count"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:layout_below="@+id/show_count"
+        android:layout_centerHorizontal="true"
 
-</LinearLayout>
+        />
+
+</RelativeLayout>
