button added to add comment in linear layout

--- a/ScrollingText/app/src/main/res/layout/activity_main.xml
+++ b/ScrollingText/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,10 @@
             android:padding="@dimen/padding_regular"
             android:autoLink="web"
             android:text="@string/article_text" />
-
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/add_comment"/>
     </LinearLayout>
     </ScrollView>
 
