--- a/PhoenixChatMessenger/app/src/main/res/layout/fragment_users.xml
+++ b/PhoenixChatMessenger/app/src/main/res/layout/fragment_users.xml
@@ -3,8 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="Fragments.UsersFragment">
-
+   <EditText
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+      android:layout_margin="5dp"
+       android:id="@+id/search_user"
+       android:hint="Search..."
+       />
    <androidx.recyclerview.widget.RecyclerView
+       android:layout_below="@+id/search_user"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
