--- a/PhoenixChatMessenger/app/src/main/res/layout/chat_item_left.xml
+++ b/PhoenixChatMessenger/app/src/main/res/layout/chat_item_left.xml
@@ -2,6 +2,7 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="300dp"
+    android:padding="8dp"
     android:layout_height="wrap_content">
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="40dp"
@@ -22,5 +23,12 @@
         android:layout_centerVertical="true"
         android:background="@drawable/background_left"
         />
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txt_seen"
+        android:visibility="gone"
+        android:layout_below="@id/show_message"
+        android:text="seen"
+        />
 </RelativeLayout>
