--- a/PhoenixChatMessenger/app/src/main/res/layout/user_item.xml
+++ b/PhoenixChatMessenger/app/src/main/res/layout/user_item.xml
@@ -47,4 +47,15 @@
         android:layout_marginStart="-15dp"
         android:layout_toEndOf="@id/profile_image"
         />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/username"
+        android:layout_toRightOf="@id/profile_image"
+        android:layout_marginTop="5dp"
+        android:paddingTop="5dp"
+        android:id="@+id/lastMessage"
+        android:layout_marginLeft="20dp"
+        android:textColor="@color/colorPrimaryDark"
+        android:maxLines="1"/>
 </RelativeLayout>
